[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Resources/Images/Player/placeholder_idle.png" type="Texture" id=1]
[ext_resource path="res://Assets/Objects/FakeEnemy/FakeEnemy.gd" type="Script" id=2]
[ext_resource path="res://Assets/Resources/Audio/sfxia/exports/plunge.wav" type="AudioStream" id=3]

[node name="FakeEnemy" type="Sprite"]
scale = Vector2( 6, 6.15 )
z_index = 50
texture = ExtResource( 1 )
hframes = 2
script = ExtResource( 2 )

[node name="AttackingPeriodTimer" type="Timer" parent="."]
wait_time = 1.5

[node name="AttackSoundPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[connection signal="timeout" from="AttackingPeriodTimer" to="." method="_on_AttackingPeriodTimer_timeout"]
